--- a/index.html
+++ b/index.html
@@ -16,7 +16,35 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!-- ヘッダー -->
     <header>
+      <div class="inner">
+        <!-- ヘッダーナビ -->
+        <div class="nav">
+          <h1><a href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+          <!-- ヘッダーナビ 項目部分 -->
+          <div class="nav_li">
+            <ul>
+              <li><a href="/about">ABOUT US</a></li>
+              <li><a href="/news">NEWS</a></li>
+              <li><a href="/photo">PHOTO</a></li>
+              <li><a href="/shop">ONLINE SHOP</a></li>
+              <li><a href="/access">ACCESS</a></li>
+              <li><a href="/contact">CONTACT</a></li>
+              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="instagram"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- .inner div -->
     </header>
+    <main>
+      <!-- About Us カフェ紹介-->
+      <div id="aboutus">
+        
+      </div>
+      <!-- #about us -->
+    </main>
+
   </body>
 </html>
