--- a/index.html
+++ b/index.html
@@ -39,11 +39,23 @@
       <!-- .inner div -->
     </header>
     <main>
-      <!-- About Us カフェ紹介-->
-      <div id="aboutus">
-        
+      <div class="inner">
+        <!-- About Us カフェ紹介-->
+        <div id="aboutus">
+          <h2>About Us</h2>
+          <p id="aap">私たちについて</p>
+          <div id="aboutus_a">
+            <img src="img/kari/aboutus.jpg" alt="aboutus">
+            <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
+            <div id="aboutus_b">
+              <img src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキ</p>
+            </div>
+          </div>
+        </div>
+        <!-- #about us -->
       </div>
-      <!-- #about us -->
+      <!-- /.inner -->
     </main>
 
   </body>
