--- a/index.html
+++ b/index.html
@@ -45,15 +45,22 @@
           <h2>About Us</h2>
           <p id="aap">私たちについて</p>
           <div id="aboutus_a">
-            <img src="img/kari/aboutus.jpg" alt="aboutus">
-            <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
+            <div id="aboutus_img">
+              <img id="ai-1" src="img/kari/momo.jpg" alt="桃パフェ">
+              <img id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
+            </div>
             <div id="aboutus_b">
-              <img src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
               <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキ</p>
             </div>
           </div>
         </div>
         <!-- #about us -->
+
+        <!-- News -->
+        <div id="news">
+
+        </div>
       </div>
       <!-- /.inner -->
     </main>
