main online shop完成
ボタンも作成

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png">
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -42,11 +42,11 @@
       <div class="inner">
         <!-- About Us カフェ紹介-->
         <div id="aboutus">
-          <h2>About Us</h2>
-          <p id="aap">私たちについて</p>
+          <h2>About us</h2>
+          <p class="aap">私たちについて</p>
           <div id="aboutus_a">
             <div id="aboutus_img">
-              <img id="ai-1" src="img/kari/momo.jpg" alt="桃パフェ">
+              <img id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
               <img id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
             </div>
             <div id="aboutus_b">
@@ -59,11 +59,52 @@
 
         <!-- News -->
         <div id="news">
+          <div class="tandb">
+            <h2>News</h2>
+            <div class="btn-4"><a href="#">READ MORE</a></div>
+          </div>
+          <div id="news_a">
+            <p><span>日付</span>ここにニュースが入ります</p>
+            <p><span>日付</span>ここにニュースが入ります</p>
+            <p><span>日付</span>ここにニュースが入ります</p>
+            <p><span>日付</span>ここにニュースが入ります</p>
+          </div>
+        </div>
 
+        <!-- Photo -->
+        <div id="photo">
+          <h2>Photo</h2>
+            <p class="sub_t photo_bp">旬なものを、旬なときに。</p>
+            <div id="photo_b">
+              <img src="img/kari/carry1.jpg" alt="">
+              <img src="img/kari/toast.jpg" alt="">
+              <img src="img/kari/pasta2.jpg" alt="">
+              <img src="img/kari/cake2.jpg" alt="">
+              <img src="img/kari/coffee.jpg" alt="">
+              <img src="img/kari/maccha.jpg" alt="">
+            </div>
+            <div class="btn-4"><a href="#">VIEW MORE</a></div>
+          </div>
         </div>
       </div>
-      <!-- /.inner -->
-    </main>
+        <!-- Onlin shop -->
+        <div id="online_s">
+          <div class="inner">
+            <h2>ONLINE SHOP</h2>
+            <p class="sub_t onl_aa">特別な人へ、特別な日に。</p>
+              <div id="onl_p">
+                <img src="img/kari/cookie.jpg" alt="クッキー">
+                <div id="onl_pp">
+                  <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
+                  <div class="btn-3"><a href="#">詳細はこちら</a></div>
+                </div>
+              </div>
+            </div>
+            <!-- /.inner -->
+          </div>
 
-  </body>
+
+        </main>
+
+      </body>
 </html>
