--- a/index.html
+++ b/index.html
@@ -91,19 +91,40 @@
         <div id="online_s">
           <div class="inner">
             <h2>ONLINE SHOP</h2>
-            <p class="sub_t onl_aa">特別な人へ、特別な日に。</p>
+            <p class="sub_t">特別な人へ、特別な日に。</p>
               <div id="onl_p">
                 <img src="img/kari/cookie.jpg" alt="クッキー">
                 <div id="onl_pp">
                   <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
-                  <div class="btn-3"><a href="#">詳細はこちら</a></div>
+                  <div class="btn-3"><a href="#">詳細をみる</a></div>
                 </div>
               </div>
             </div>
             <!-- /.inner -->
           </div>
-
-
+          <!-- access -->
+          <div class="inner">
+            <div id="access">
+              <div id="acc_a">
+                <h2>ACCESS</h2>
+                <p class="sub_t">ぜひ、遊びにいらしてください。</p>
+                <p id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
+                <p id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
+                ＊ 営業に関する詳しい情報は、<a id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
+                <p id="a_p3">STORE INFO</p>
+                <ul>
+                  <li><span>・</span>熊本市東区御領8丁目10−53</li>
+                  <li><span>・</span>11:00 - 18:00 (L.O 17:00)<br>
+                  ※材料がなくなり次第、早めのCloseとさせていただくことがあります。</li>
+                  <li><span>・</span>水曜定休日</li>
+                  <li><span>・</span><a href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
+                </ul>
+              </div>
+              <img src="img/kari/cake3.jpg" alt="">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="1080" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+          </div>
+          <!-- /.inner -->
         </main>
 
       </body>
