--- a/index.html
+++ b/index.html
@@ -124,8 +124,30 @@
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="1080" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
           </div>
-          <!-- /.inner -->
-        </main>
+            <!-- footer -->
+            <div class="main_contact">
+              <img class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <p class="main_con_p">You and Me Cafe</p>
+              <div class="main_con_i_1"></div>
+              <div class="main_con_i_2"></div>
+              <div class="clear"></div>
 
+              <div class="btn-5">
+                <a href="#">
+                  <div class="con_1">
+                    <h3>Contact</h3>
+                    <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+                  </div>
+                </a>
+              </div>
+              <a href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+              <div class="inner">
+                <div class="con_4"></div>
+              </div>
+            </div>
+          </main>
+          <footer>
+            <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+          </footer>
       </body>
 </html>
