--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       <div class="inner">
         <!-- ヘッダーナビ -->
         <div class="nav">
-          <h1><a href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
           <!-- ヘッダーナビ 項目部分 -->
           <div class="nav_li">
             <ul>
-              <li><a href="/about">ABOUT US</a></li>
-              <li><a href="/news">NEWS</a></li>
-              <li><a href="/photo">PHOTO</a></li>
-              <li><a href="/shop">ONLINE SHOP</a></li>
-              <li><a href="/access">ACCESS</a></li>
-              <li><a href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="instagram"></a></li>
+              <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
+              <li><a class="hov_nav_w" href="/news">NEWS</a></li>
+              <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
+              <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
+              <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
+              <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
+              <li><a class="hov_insta" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
             </ul>
           </div>
         </div>
@@ -110,14 +110,14 @@
                 <p class="sub_t">ぜひ、遊びにいらしてください。</p>
                 <p id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
                 <p id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
-                ＊ 営業に関する詳しい情報は、<a id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
+                ＊ 営業に関する詳しい情報は、<a class="hov_05" id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
                 <p id="a_p3">STORE INFO</p>
                 <ul>
                   <li><span>・</span>熊本市東区御領8丁目10−53</li>
                   <li><span>・</span>11:00 - 18:00 (L.O 17:00)<br>
                   ※材料がなくなり次第、早めのCloseとさせていただくことがあります。</li>
                   <li><span>・</span>水曜定休日</li>
-                  <li><span>・</span><a href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
+                  <li><span>・</span><a  class="hov_05"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
                 </ul>
               </div>
               <img src="img/kari/cake3.jpg" alt="">
@@ -140,7 +140,7 @@
                   </div>
                 </a>
               </div>
-              <a href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+              <a class="hov" href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
               <div class="inner">
                 <div class="con_4"></div>
               </div>
