--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- ヘッダー -->
-    <header>
+    <header class="head-img">
       <div class="inner">
         <!-- ヘッダーナビ -->
         <div class="nav">
