オンラインショップつくりはじめ
sassの整理

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- ヘッダー -->
-    <header class="head-img">
+    <!--  header -->
+    <header class="head-bg-img">
       <div class="inner">
-        <!-- ヘッダーナビ -->
+        <!-- nav -->
         <div class="nav">
           <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- ヘッダーナビ 項目部分 -->
+          <!-- header nav ul li -->
           <div class="nav_li">
             <ul>
               <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
@@ -31,7 +31,7 @@
               <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
               <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
               <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
-              <li><a class="hov_insta" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
             </ul>
           </div>
         </div>
@@ -127,7 +127,7 @@
             <!-- footer -->
             <div class="main_contact">
               <img class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-              <p class="main_con_p">You and Me Cafe</p>
+              <p class="main_con_p">You and Me Café</p>
               <div class="main_con_i_1"></div>
               <div class="main_con_i_2"></div>
               <div class="clear"></div>
