--- a/photo.html
+++ b/photo.html
@@ -5,38 +5,77 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="discription" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>Photo | U-cafe 【公式】あなたとわたしのカフェ。| 熊本市東区</title>
+  <title>Photo -オイシイ記録。- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png">
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
         <!-- headerー -->
-        <header>
+        <header class="header-photo">
           <div class="inner">
-            <!-- nav -->
-            <div class="nav">
-              <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-              <!-- nav li ul -->
+            <!-- ヘッダーナビ -->
+            <div class="nav nav-border">
+              <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+              <!-- ヘッダーナビ 項目部分 -->
               <div class="nav_li">
                 <ul>
-                  <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
-                  <li><a class="hov_nav_w" href="/news">NEWS</a></li>
-                  <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
-                  <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
-                  <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
-                  <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
-                  <li><a class="hov_insta" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+                  <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
+                  <li><a class="hov_nav_b" href="/news">NEWS</a></li>
+                  <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
+                  <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
+                  <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
+                  <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                  <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
                 </ul>
               </div>
             </div>
           </div>
           <!-- .inner div -->
         </header>
+        <main>
+          <div class="inner cen">
+            <h2>Photo</h2>
+            <p class="sub_t">オイシイ記録。</p>
+            <div id="photo_inner" class="d-f fd-c ai-c">
+              <img class="photo_t" src="img/kari/cake2.jpg" alt="">
+              <img src="img/kari/maccha.jpg" alt="" class="photo_y">
+            </div>
+          </div>
+          <!-- /.inner -->
+          <footer>
+
+            <!-- footer -->
+            <div class="main_contact">
+              <img class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <p class="main_con_p">You and Me Café</p>
+              <div class="main_con_i_1"></div>
+              <div class="main_con_i_2"></div>
+              <div class="clear"></div>
+
+              <div class="btn-5">
+                <a href="#">
+                  <div class="con_1">
+                    <h3>Contact</h3>
+                    <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+                  </div>
+                </a>
+              </div>
+              <a class="hov" href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+              <div class="inner">
+                <div class="con_4"></div>
+              </div>
+            </div>
+          </main>
+          <footer>
+            <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+          </footer>
+        </main>
   </body>
 </html>
