--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png">
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -46,8 +47,8 @@
           <p class="aap">私たちについて</p>
           <div id="aboutus_a">
             <div id="aboutus_img">
-              <img id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
-              <img id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
+              <img loading="lazy" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
+              <img loading="lazy" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
             </div>
             <div id="aboutus_b">
               <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
@@ -76,12 +77,12 @@
           <h2>Photo</h2>
             <p class="sub_t photo_bp">旬なものを、旬なときに。</p>
             <div id="photo_b">
-              <img src="img/kari/carry1.jpg" alt="">
-              <img src="img/kari/toast.jpg" alt="">
-              <img src="img/kari/pasta2.jpg" alt="">
-              <img src="img/kari/cake2.jpg" alt="">
-              <img src="img/kari/coffee.jpg" alt="">
-              <img src="img/kari/maccha.jpg" alt="">
+              <img loading="lazy" src="img/kari/carry1.jpg" alt="">
+              <img loading="lazy" src="img/kari/toast.jpg" alt="">
+              <img loading="lazy" src="img/kari/pasta2.jpg" alt="">
+              <img loading="lazy" src="img/kari/cake2.jpg" alt="">
+              <img loading="lazy" src="img/kari/coffee.jpg" alt="">
+              <img loading="lazy" src="img/kari/maccha.jpg" alt="">
             </div>
             <div class="btn-4"><a href="#">VIEW MORE</a></div>
           </div>
@@ -93,7 +94,7 @@
             <h2>ONLINE SHOP</h2>
             <p class="sub_t">特別な人へ、特別な日に。</p>
               <div id="onl_p">
-                <img src="img/kari/cookie.jpg" alt="クッキー">
+                <img loading="lazy" src="img/kari/cookie.jpg" alt="クッキー">
                 <div id="onl_pp">
                   <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
                   <div class="btn-3"><a href="#">詳細をみる</a></div>
@@ -120,13 +121,13 @@
                   <li><span>・</span><a  class="hov_03"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
                 </ul>
               </div>
-              <img src="img/kari/cake3.jpg" alt="">
+              <img loading="lazy" src="img/kari/cake3.jpg" alt="">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="1080" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
           </div>
             <!-- footer -->
             <div class="main_contact">
-              <img class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
               <p class="main_con_p">You and Me Café</p>
               <div class="main_con_i_1"></div>
               <div class="main_con_i_2"></div>
@@ -140,7 +141,7 @@
                   </div>
                 </a>
               </div>
-              <a class="hov" href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+              <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
               <div class="inner">
                 <div class="con_4"></div>
               </div>
