--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="discription" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>Photo -オイシイ記録。- | U-cafe 【公式】あなたとわたしのカフェ。</title>
+  <title>Photo -オイシイ記録。- | U-cafe 【公式】あなたとわたしのカフェ。| 熊本市東区</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -44,8 +44,8 @@
             <h2>Photo</h2>
             <p class="sub_t">オイシイ記録。</p>
             <div id="photo_inner" class="d-f fd-c ai-c">
-              <img class="photo_t" src="img/kari/cake2.jpg" alt="">
-              <img src="img/kari/maccha.jpg" alt="" class="photo_y">
+              <img loading="lazy" class="photo_t" src="img/kari/cake2.jpg" alt="">
+              <img loading="lazy" src="img/kari/maccha.jpg" alt="" class="photo_y">
             </div>
           </div>
           <!-- /.inner -->
@@ -53,7 +53,7 @@
 
             <!-- footer -->
             <div class="main_contact">
-              <img class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+              <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
               <p class="main_con_p">You and Me Café</p>
               <div class="main_con_i_1"></div>
               <div class="main_con_i_2"></div>
@@ -67,7 +67,7 @@
                   </div>
                 </a>
               </div>
-              <a class="hov" href="#"><img class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+              <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
               <div class="inner">
                 <div class="con_4"></div>
               </div>
