--- a/shop.html
+++ b/shop.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png">
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -38,5 +39,28 @@
       </div>
       <!-- .inner div -->
     </header>
+    <div class="inner d-f fd-c ai-c" id="shop_inner">
+      <h2>Online Shop</h2>
+      <p class="sub_t">大切な人へ。</p>
+      <p class="text_a ta-c">TOFU(豆腐)×COFFEE(コーヒー) = TOFFEE(トーフィー)<br>「早くて、カラダに良くて、おいしい。」<br>いつでも手軽に口にでき、健康的な生活について考えることができ、しかも美味しい。<br>そんなメニューを発信する「TOFFEE」の人気商品をご家庭にお届けします。</p>
+      <p class="shop-ti bdr-1">CHEESECAKE Line Up</p>
+      <div class="shop-items d-f">
+
+        <div class="sp-item d-f fd-c ai-c">
+          <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
+          <p class="sp-item-ti">CHEESECAKE -PLANE-</p>
+          <p class="sp-item-ti-2">U-cafe</p>
+        </div>
+
+        <div class="sp-item d-f fd-c ai-c">
+          <img loading="lazy" src="img/kari/cake1.jpg" alt="抹茶チーズケーキ">
+          <p class="sp-item-ti">CHEESECAKE -MACCHA-</p>
+          <p class="sp-item-ti-2">U-cafe</p>
+        </div>
+        
+      </div>
+      <!-- shop-items -->
+    </div>
+    <!-- /.inner -->
   </body>
 </html>
