ショッピングカートの途中
あと少し

--- a/sp_cart.html
+++ b/sp_cart.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>Photo -オイシイ記録。- | U-cafe 【公式】あなたとわたしのカフェ。| 熊本市東区</title>
+  <title>買い物かご | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -40,41 +40,45 @@
       <!-- .inner div -->
     </header>
     <main>
-      <div class="inner cen">
-        <h2>Photo</h2>
-        <p class="sub_t">オイシイ記録。</p>
-        <div id="photo_inner" class="d-f fd-c ai-c">
-          <img loading="lazy" class="photo_t" src="img/kari/cake2.jpg" alt="">
-          <img loading="lazy" src="img/kari/maccha.jpg" alt="" class="photo_y">
+      <div class="shop-ti-big d-f ai-c jc-c bl">
+        <p class="shop-ti-big-p">MY SHOPPING CART  /  U-cafe</p>
+      </div>
+      <div class="inner">
+        <div class="cart_a">
+          <div class="cart_b">
+            <ul class="d-f">
+              <li>料金</li>
+              <li>数量</li>
+              <li>合計</li>
+            </ul>
+          </div>
+          <div class="cart_item d-f js-sb">
+            <img src="img/kari/cookie.jpg" alt="カート写真">
+            <div class="cart_e">
+              <p class="cart_1">商品名</p>
+              <p class="cart_2">サイズ</p>
+              <div class="cart_3">削除する</div>
+            </div>
+            <div class="cart_e-0 d-f">
+              <div class="cart_e-1 cc1">2,000円</div>
+              <div class="cart_e-2 cc1">○個</div>
+              <div class="cart_e-3 cc1">○○○円</div>
+            </div>
+          </div>
+          <!-- /.cart_item -->
+          <div class="cart_atr">
+            <p class="cart_f">＊ご要望 / ご贈答用にお熨斗をご希望のかたはこちらへご記入ください。</p>
+            <div class="cart_g"></div>
+            <div class="cart_h">
+              <div class="cart_7"><p>お支払い金額<br>（お引渡し時）</p></div>
+              <div class="cart_8"></div>
+            </div>
+          </div>
+          <!-- /.cart_atr -->
         </div>
+        <!-- /.cart_a -->
       </div>
       <!-- /.inner -->
-
-      <!-- footer -->
-        <div class="main_contact">
-          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-          <p class="main_con_p">You and Me Café</p>
-          <div class="main_con_i_1"></div>
-          <div class="main_con_i_2"></div>
-          <div class="clear"></div>
-
-          <div class="btn-5">
-            <a href="#">
-              <div class="con_1">
-                <h3>Contact</h3>
-                <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-              </div>
-            </a>
-          </div>
-          <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-          <div class="inner">
-            <div class="con_4"></div>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-      </footer>
     </main>
   </body>
 </html>
