--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="keyword" content="u-cafe,熊本カフェ,ユーカフェ">
-	<meta name="discription" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
+	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
   <title>U-cafe 【公式】あなたとわたしのカフェ。| 熊本市東区</title>
   <!-- favicon用 -->
@@ -126,29 +126,28 @@
             </div>
           </div>
             <!-- footer -->
-            <div class="main_contact">
-              <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-              <p class="main_con_p">You and Me Café</p>
-              <div class="main_con_i_1"></div>
-              <div class="main_con_i_2"></div>
-              <div class="clear"></div>
-
-              <div class="btn-5">
-                <a href="#">
-                  <div class="con_1">
-                    <h3>Contact</h3>
-                    <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-                  </div>
-                </a>
-              </div>
-              <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-              <div class="inner">
-                <div class="con_4"></div>
-              </div>
+          <div class="main_contact">
+            <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+            <p class="main_con_p">You and Me Café</p>
+            <div class="main_con_i_1"></div>
+            <div class="main_con_i_2"></div>
+            <div class="clear"></div>
+            <div class="btn-5">
+              <a href="#">
+                <div class="con_1">
+                  <h3>Contact</h3>
+                  <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+                </div>
+              </a>
             </div>
-          </main>
-          <footer>
-            <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-          </footer>
-      </body>
+            <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+            <div class="inner">
+              <div class="con_4"></div>
+            </div>
+          </div>
+        </main>
+        <footer>
+          <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+        </footer>
+    </body>
 </html>
