--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="keyword" content="u-cafe,熊本カフェ,ユーカフェ">
-	<meta name="discription" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
+	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
   <title>shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
@@ -43,24 +43,73 @@
       <h2>Online Shop</h2>
       <p class="sub_t">大切な人へ。</p>
       <p class="text_a ta-c">TOFU(豆腐)×COFFEE(コーヒー) = TOFFEE(トーフィー)<br>「早くて、カラダに良くて、おいしい。」<br>いつでも手軽に口にでき、健康的な生活について考えることができ、しかも美味しい。<br>そんなメニューを発信する「TOFFEE」の人気商品をご家庭にお届けします。</p>
-      <p class="shop-ti bdr-1">CHEESECAKE Line Up</p>
-      <div class="shop-items d-f">
-
-        <div class="sp-item d-f fd-c ai-c">
-          <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
-          <p class="sp-item-ti">CHEESECAKE -PLANE-</p>
-          <p class="sp-item-ti-2">U-cafe</p>
+      <div class="shop-items">
+        <!-- ↓CHEESECAKE -->
+        <div class="sp-item">
+          <p class="shop-ti bdr-1">CHEESECAKE Line Up</p>
+          <div class="sp-item-d d-f js-sb">
+            <a href="#">
+              <div class="sp-item-dd d-f fd-c ai-c">
+                <div class="img-hov-1 siz">
+                  <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
+                </div>
+                <p class="sp-item-ti">CHEESECAKE -PLANE-</p>
+                <p class="sp-item-ti-2">U-cafe</p>
+              </div>
+            </a>
+            <a href="#">
+              <div class="sp-item-dd d-f fd-c ai-c">
+                <div class="img-hov-1  siz">
+                  <img loading="lazy" src="img/kari/cake1.jpg" alt="抹茶チーズケーキ">
+                </div>
+                <p class="sp-item-ti">CHEESECAKE -MACCHA-</p>
+                <p class="sp-item-ti-2">U-cafe</p>
+              </div>
+            </a>
+          </div>
         </div>
-
-        <div class="sp-item d-f fd-c ai-c">
-          <img loading="lazy" src="img/kari/cake1.jpg" alt="抹茶チーズケーキ">
-          <p class="sp-item-ti">CHEESECAKE -MACCHA-</p>
-          <p class="sp-item-ti-2">U-cafe</p>
+        <!-- Cookie -->
+        <div class="sp-item">
+          <p class="shop-ti bdr-2">COOKIE - Special Days -</p>
+          <div class="sp-item-d d-f js-sb">
+            <a href="#">
+              <div class="sp-item-dd d-f fd-c ai-c">
+                <div class="img-hov-1 siz">
+                  <img loading="lazy" src="img/kari/cookie1.jpg" alt="クッキー">
+                </div>
+                <p class="sp-item-ti">EVENT COOKIE</p>
+                <p class="sp-item-ti-2">U-cafe</p>
+              </div>
+            </a>
+          </div>
         </div>
-        
       </div>
       <!-- shop-items -->
     </div>
     <!-- /.inner -->
+
+        <!-- footer -->
+    <div class="main_contact">
+      <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+      <p class="main_con_p">You and Me Café</p>
+      <div class="main_con_i_1"></div>
+      <div class="main_con_i_2"></div>
+      <div class="clear"></div>
+      <div class="btn-5">
+        <a href="#">
+          <div class="con_1">
+            <h3>Contact</h3>
+            <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+          </div>
+        </a>
+      </div>
+      <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+      <div class="inner">
+        <div class="con_4"></div>
+      </div>
+    </div>
+    <footer>
+      <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+    </footer>
   </body>
 </html>
